feat: implements sorting desc and aces
Refs: #287